--- a/app/src/main/webapp/template/template.xhtml
+++ b/app/src/main/webapp/template/template.xhtml
@@ -5,8 +5,13 @@
       xmlns:ui="http://java.sun.com/jsf/facelets">
     <h:head>
         <ui:insert name="head"/>
+
+        <!-- Bootstrap styles -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"></link>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+
+        <!-- Animate styles -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     </h:head>
     <h:body>
 
@@ -43,10 +48,10 @@
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li>
-                                        <h:commandLink class="dropdown-item" value="Sedes" action="#{nav.showClient}"></h:commandLink>
+                                        <h:commandLink class="dropdown-item" value="Sedes" action="#{nav.showSite}"></h:commandLink>
                                     </li>
                                     <li>
-                                        <h:commandLink class="dropdown-item" value="Repuestos" action="pages/mechanic/mechanic-index"></h:commandLink>
+                                        <h:commandLink class="dropdown-item" value="Repuestos" action="#{nav.showReplacement}"></h:commandLink>
                                     </li>
                                 </ul>
                             </li>                          
@@ -65,7 +70,7 @@
             </nav>
         </h:form>
 
-        <div class="container my-4">
+        <div class="container my-4 animate__animated animate__fadeIn">
             <ui:insert name="body"/>
         </div>
     </h:body>
