--- a/app/src/main/webapp/template/template.xhtml
+++ b/app/src/main/webapp/template/template.xhtml
@@ -12,6 +12,9 @@
 
         <!-- Animate styles -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+        
+        <!-- icons Script -->
+        <script src="https://kit.fontawesome.com/a415589fc2.js" crossorigin="anonymous"></script>
     </h:head>
     <h:body>
 
@@ -70,9 +73,10 @@
             </nav>
         </h:form>
 
-        <div class="container my-4 animate__animated animate__fadeIn">
+        <div class="container my-4">
             <ui:insert name="body"/>
         </div>
+        
     </h:body>
 </html>
 
