--- a/app/src/main/webapp/template/template.xhtml
+++ b/app/src/main/webapp/template/template.xhtml
@@ -21,26 +21,29 @@
         <h:form>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
-                    <h:commandLink class="navbar-brand" value="CCenter" action="#{listNav.showHome}"></h:commandLink>
+                    <h:commandLink class="navbar-brand" value="CCenter" action="#{homeNav.index}"></h:commandLink>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <h:commandLink class="nav-link" value="Inicio" action="#{homeNav.index}"></h:commandLink>
+                            </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     Personas
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li>
-                                        <h:commandLink class="dropdown-item" value="Clientes" action="#{listNav.showClient}"></h:commandLink>
+                                        <h:commandLink class="dropdown-item" value="Clientes" action="#{clientNav.index}"></h:commandLink>
                                     </li>
                                     <li>
                                         <h:commandLink class="dropdown-item" value="Mecanicos" action="#{listNav.showMechanic}"></h:commandLink>
                                     </li>
                                     <li><hr class="dropdown-divider"></hr></li>
                                     <li>
-                                        <h:commandLink class="dropdown-item" value="Tipo documento" action="#{listNav.showDocument}"></h:commandLink>
+                                        <h:commandLink class="dropdown-item" value="Tipo documento" action="#{documentTypeNav.index}"></h:commandLink>
                                     </li>
                                 </ul>
                             </li>
