--- a/app/src/main/webapp/template/template.xhtml
+++ b/app/src/main/webapp/template/template.xhtml
@@ -57,7 +57,7 @@
                                         <h:commandLink class="dropdown-item" value="Sedes" action="#{siteNav.index}"></h:commandLink>
                                     </li>
                                     <li>
-                                        <h:commandLink class="dropdown-item" value="Repuestos" action="#{listNav.showReplacement}"></h:commandLink>
+                                        <h:commandLink class="dropdown-item" value="Repuestos" action="#{replacementNav.index}"></h:commandLink>
                                     </li>
                                 </ul>
                             </li>                          
