--- a/app/src/main/webapp/template/template.xhtml
+++ b/app/src/main/webapp/template/template.xhtml
@@ -61,7 +61,7 @@
                                     </li>
                                     <li><hr class="dropdown-divider"></hr></li>
                                     <li>
-                                        <h:commandLink class="dropdown-item" value="Inventario" action="#{documentTypeNav.index}"></h:commandLink>
+                                        <h:commandLink class="dropdown-item" value="Inventario" action="#{replacementSiteNav.index}"></h:commandLink>
                                     </li>
                                 </ul>
                             </li>                          
@@ -69,11 +69,11 @@
                                 <h:commandLink class="nav-link" value="Carros" action="#{carNav.index}"></h:commandLink>
                             </li>
                             <li class="nav-item">
-                                <h:commandLink class="nav-link" value="Incidencias" action="pages/car/car-index"></h:commandLink>
-                            </li>  
-                            <li class="nav-item">
-                                <h:commandLink class="nav-link" value="Facturas" action="pages/car/car-index"></h:commandLink>
+                                <h:commandLink class="nav-link" value="Facturas" action="#{billNav.index}"></h:commandLink>
                             </li>
+                            <li class="nav-item">
+                                <h:commandLink class="nav-link" value="Informes" action="#{reportNav.index}"></h:commandLink>
+                            </li>  
                         </ul>
                     </div>
                 </div>
